
export abstract class BaseApi {
  // No methods defined; child classes will compose endpoint instances
}
